Resolves: fdo#48569 crash on export to .docx of inline anchored frame

we're currently deferring to the end of the text node to export
the contents of frames. If its anchored as character then the
sw::Frame (which is allocated on stack) has gone out of scope
so this pointer points to junk. Copy it instead.

Sill need to export frames property at some stage.

Change-Id: Ib9f8c6857ce1afe6acba84986b692139e44a7aad